Service Registry, Admin Server, Greet Service, Welcome Service, Load Balancer, Feign Client and Ribbon

--- a/trip-ease-backend/user-service/pom.xml
+++ b/trip-ease-backend/user-service/pom.xml
@@ -54,6 +54,11 @@
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		</dependency>
+		<!-- Spring Boot Starter HATEOS -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
